--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <header>
-    <h1>Sharath Kumar</h1>
+    <h1>Vamshi pujari</h1>
     <img src="VAMSHI_PHOTO.jpg" alt="Your Name" class="profile-photo">
     <h2>Software Engineer</h2>
   </header>
